--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,10 +1,16 @@
 @import './base.css';
+/* @import '../../node_modules/buefy/src/scss/buefy.scss';
+@import './variables.scss'; */
 
-#app {
+#web {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   font-weight: normal;
+}
+
+a {
+  color: #965c00 !important; /* Change #3498db to your desired color */
 }
 
 a,
@@ -24,6 +30,6 @@ a,
 @media (min-width: 1024px) {
   body {
     display: flex;
-    place-items: center;
+    flex-direction: column;
   }
 }
